atualizei exercicio  iframe 002

--- a/exercicios/ex023/tabela006.html
+++ b/exercicios/ex023/tabela006.html
@@ -34,7 +34,7 @@
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa tenetur quisquam velit iure necessitatibus quia, veniam earum perferendis inventore autem, totam possimus tempora esse sit sed. Repudiandae, ducimus et? Reprehenderit!</p>
   <div id="container">
     <table>
-      <caption>Tabelas responsivas</caption>
+      <caption>Vendas de produtos por mês</caption>
       <thead>
         <tr>
           <th>Produto</th>
