--- a/exercicios/ex027/flex008/index.html
+++ b/exercicios/ex027/flex008/index.html
@@ -9,9 +9,9 @@
       background-color: lightsalmon;
 
       display: flex;
-      flex-flow: row wrap
-      align-itens: flex-start ;
-      heigth: 400px
+      flex-flow: row wrap;
+      align-items: flex-start;
+      height: 400px;
     }
     div.item {
       background-color: lightskyblue;
@@ -26,7 +26,7 @@
     }
 
     div#i2 {
-      align-self:auto;
+      align-self: auto;
     }
 
     div#i3 {
@@ -38,15 +38,15 @@
     }
 
     div#i5 {
-      align-self:center;
+      align-self: center;
     }
 
     div#i6 {
-      align-self:flex-start;
+      align-self: flex-start;
     }
 
     div#i7 {
-      align-self:stretch;
+      align-self: stretch;
     }
   </style>
 </head>
